external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_unpack_assign_lhs_mdot_no_addr.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_unpack_assign_lhs_mdot_no_addr.move:4:14
  │
4 │         false::M { f } = 0;
  │              ^^
  │              │
  │              Unexpected '::'
  │              Expected ';'

error[E03006]: unexpected name in this position
  ┌─ tests/move_check/parser/invalid_unpack_assign_lhs_mdot_no_addr.move:7:9
  │
7 │         0::M { f } = 0;
  │         ^^^^
  │         │
  │         Unexpected module identifier. A module identifier is not a valid type
  │         Expected a module name

error[E04005]: expected a single type
   ┌─ tests/move_check/parser/invalid_unpack_assign_lhs_mdot_no_addr.move:10:9
   │
 2 │     fun foo() {
   │         --- Expected a single type, but found expression list type: '()'
   ·
10 │         foo().M { f } = 0;
   │         ^^^^^ Invalid dot access

error[E04009]: expected specific type
   ┌─ tests/move_check/parser/invalid_unpack_assign_lhs_mdot_no_addr.move:10:9
   │
 2 │     fun foo() {
   │         --- Expected a struct type in the current module but got: '()'
   ·
10 │         foo().M { f } = 0;
   │         ^^^^^^^ Unbound field 'M'

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/invalid_unpack_assign_lhs_mdot_no_addr.move:10:17
   │
10 │         foo().M { f } = 0;
   │                 ^
   │                 │
   │                 Unexpected '{'
   │                 Expected ';'
